[project]
name = "implied-volatility-modeling"
version = "0.1.0"
description = "Interest-rate implied volatility: Black-76, SABR"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
notebook = ["jupyter>=1.0"]
vae = ["torch>=2.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["helper_module*"]
